<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context = ".ProposeActivity">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/propose_introduction"
        android:paddingBottom="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:id="@+id/userInput_author"
        android:inputType="textMultiLine"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:id="@+id/userInput_title"
        android:inputType="textMultiLine"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:id="@+id/userInput_url"
        android:inputType="textUri"
        android:paddingBottom="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propose_button_text"
        android:textAllCaps="true"
        android:onClick="submitProposal" />


</LinearLayout>

</ScrollView>